# jorcs

./: .dockerignore  .gitignore  CMakeLists.txt  Cargo.toml  README.md  index.html  insert_license.sh
.github/workflows/: ci.yml
CMake/: Build3rdParty.cmake  Fetch3rdParty.cmake
assets/: index-BPF00E5R.js  index-B_40RxoV.js  index-Bb6AgQxM.js  index-CUxzUX-b.js  index-QyrgHRTl.js  index-a1PIMxEO.js
backend/: CMakeLists.txt
backend/src/: main.cpp
deploy/: Dockerfile
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  ColorPicker.tsx  IntroOverlay.tsx  OrbitControls.ts  OverlayInstructions.tsx  RubiksCubeApp.tsx  RubiksCubeRecognizer.tsx  RubiksCubeViewer.tsx  colorRecognition.ts  cubeColors.ts  solver.ts  useCubeStore.ts  vite-env.d.ts
frontend/src/wasm/: jorcs.d.ts
jorcs-web/: .prettierrc  LICENSE_HEADER  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
jorcs-web/src/: App.tsx  ColorPalette.tsx  OrbitControls.ts  RubiksCubeApp.tsx  RubiksCubeRecognizer.tsx  RubiksCubeViewer.tsx  colorRecognition.ts  cubeDetection.ts  cube_grabber.tsx  useCubeStore.ts
jorcs-web/src/jorcs-wasm/: jorcs.d.ts  jorcs.js  jorcs_bg.js  jorcs_bg.wasm  jorcs_bg.wasm.d.ts  package.json
solver/: CMakeLists.txt
solver/CMake/: Fetch3rdParty.cmake
solver/src/: CMakeLists.txt  cube.cpp
solver/src/jorcs/: export.h  facelet.h  ida.h  move.h  solve.h  two_phase.h
solver/tests/: CMakeLists.txt  basic_cube_state.cpp  doctest-main.cpp  facelet_tests.cpp  ida_tests.cpp  solve_tests.cpp  test_moves.cpp  two_phase_tests.cpp
solver/tools/: pdbgen.cpp
solver/wasm/: CMakeLists.txt  bindings.cpp
src/: lib.rs  utils.rs
src/jorcs/: cube.h  move.h
tests/: test_moves.cpp  web.rs
